# Optimization

./: CMakeLists.txt  note.md
src/: helloworld.cpp  helloworld_analytic.cpp  helloworld_numeric.cpp
